# vize

./: .gitignore  Cargo.toml  README.md  clippy.toml  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/workflows/: check.yml  deploy-docs.yml  release.yml
bench/: check.ts  fmt.ts  generate.mjs  lint.ts  package.json  run.ts  vite.ts
crates/vize/: README.md
crates/vize_atelier_core/: README.md
crates/vize_atelier_dom/: README.md
crates/vize_atelier_sfc/: Cargo.toml  README.md
crates/vize_atelier_ssr/: Cargo.toml
crates/vize_atelier_vapor/: Cargo.toml  README.md
crates/vize_atelier_vapor/src/: generators.rs  ir.rs  lib.rs  transforms.rs
crates/vize_atelier_vapor/src/generate/: context.rs  expression.rs  helpers.rs  mod.rs  operations.rs  setup.rs
crates/vize_atelier_vapor/src/generators/: block.rs  component.rs  directive.rs  event.rs  for_node.rs  generate_slot.rs  generate_text.rs  if_node.rs  prop.rs
crates/vize_atelier_vapor/src/transform/: context.rs  control.rs  directive.rs  element.rs  mod.rs  text.rs
crates/vize_atelier_vapor/src/transforms/: element.rs  transform_slot.rs  transform_text.rs  v_bind.rs  v_for.rs  v_if.rs  v_model.rs  v_on.rs  v_show.rs
crates/vize_canon/: README.md
crates/vize_carton/: README.md
crates/vize_croquis/: README.md
crates/vize_glyph/: README.md
crates/vize_maestro/: Cargo.toml
crates/vize_maestro/src/: lib.rs
crates/vize_maestro/src/document/: mod.rs  store.rs
crates/vize_maestro/src/ide/: code_action.rs  code_lens.rs  document_link.rs  mod.rs  rename.rs  tsgo_support.rs  workspace_symbols.rs
crates/vize_maestro/src/ide/completion/: items.rs  mod.rs  script.rs  service.rs  style.rs  template.rs
crates/vize_maestro/src/ide/definition/: bindings.rs  helpers.rs  mod.rs  script.rs  service.rs  template.rs
crates/vize_maestro/src/ide/diagnostics/: collectors.rs  mod.rs  tsgo.rs
crates/vize_maestro/src/ide/file_rename/: .manual.rs.pending-snap  manual.rs  mod.rs
crates/vize_maestro/src/ide/hover/: mod.rs  script.rs  template.rs  tsgo.rs
crates/vize_maestro/src/ide/inlay_hint/: mod.rs  script.rs  template.rs
crates/vize_maestro/src/ide/references/: mod.rs  script.rs  template.rs
crates/vize_maestro/src/ide/semantic_tokens/: encoding.rs  expressions.rs  mod.rs  style.rs  template.rs  types.rs
crates/vize_maestro/src/ide/type_service/: diagnostics.rs  mod.rs  type_context.rs
crates/vize_maestro/src/server/: capabilities.rs  format.rs  handlers.rs  helpers.rs  mod.rs  state.rs
crates/vize_maestro/src/utils/: mod.rs  position.rs
crates/vize_maestro/src/virtual_code/: generator.rs  mod.rs  script_code.rs  source_map.rs  style_code.rs  template_code.rs
crates/vize_patina/: README.md
crates/vize_relief/: README.md
crates/vize_vitrine/: Cargo.toml  README.md
crates/vize_vitrine/src/: napi_typecheck.rs  types.rs  wasm_typecheck.rs
crates/vize_vitrine/src/napi/: art.rs  lint.rs  mod.rs  sfc.rs  template.rs
crates/vize_vitrine/src/wasm/: analyze.rs  cross_file.rs  lint.rs  mod.rs  musea.rs
docs/: index.html  package.json  vite.config.ts
docs/content/: getting-started.md  index.md  philosophy.md
docs/theme/: marble.js  og.vue
examples/: README.md
examples/cli/: vize.config.ts
examples/vite-musea/: index.html  package.json  playwright.config.ts  vite.config.ts  vize.config.ts
npm/fresco/: package.json  tsdown.config.ts  vite.config.ts
npm/fresco-native/: index.js  package.json
npm/musea-mcp-server/: package.json  tsdown.config.ts  vite.config.ts
npm/musea-nuxt/: package.json
npm/nuxt/: package.json  tsdown.config.ts  vite.config.ts
npm/rspack-vize-plugin/: README.md  package.json  tsdown.config.ts  vite.config.ts
npm/unplugin-vize/: README.md  package.json  tsconfig.json  tsdown.config.ts  vite.config.ts
npm/vite-plugin-musea/: README.md  gallery-vite.config.ts  package.json  tsdown.config.ts  vite.config.ts
npm/vite-plugin-vize/: README.md  package.json  vite.config.ts
npm/vize-native/: index.js  (+2 more)
playground/: README.md  index.html  oxlint.json  package.json  playwright.config.ts  vite.app.config.ts  vite.config.ts  vite.node.config.ts  vite.test.config.ts  vitest.config.ts  vitest.node.config.ts
scripts/: dev-app.test.ts  dev-app.ts  generate-expected.ts  publish-crates.sh  release.sh
tests/: tsconfig.json
(+968 files in other folders)
