[package]
name = "vize_atelier_vapor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Atelier Vapor - The Vapor mode compiler workshop for Vize"

[dependencies]
vize_carton = { workspace = true }
vize_atelier_core = { workspace = true }
vize_croquis = { workspace = true }

oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_ast_visit = { workspace = true }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }
oxc_syntax = { workspace = true }

serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
