[package]
name = "vize_maestro"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Maestro - Language Server Protocol implementation for Vize Vue templates"
publish = false

[features]
default = ["native", "glyph"]
glyph = ["dep:vize_glyph"]
native = ["vize_canon/native"]

[dependencies]
# LSP Framework
tower-lsp = "0.20"
# lsp-types is re-exported by tower-lsp, use that version

# Async Runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Text Processing
ropey = "1.6"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
dashmap = "6"
parking_lot = "0.12"
ignore = "0.4"
oxc_allocator.workspace = true
oxc_ast.workspace = true
oxc_ast_visit.workspace = true
oxc_parser.workspace = true
oxc_span.workspace = true

# Internal crates
vize_carton.workspace = true
vize_relief.workspace = true
vize_armature.workspace = true
vize_atelier_sfc.workspace = true
vize_glyph = { workspace = true, optional = true }
vize_patina.workspace = true
vize_canon = { workspace = true }
vize_croquis.workspace = true
vize_musea.workspace = true
vize_vitrine = { workspace = true, default-features = false }

[dev-dependencies]
insta.workspace = true
tempfile = "3"
