[package]
name = "vize_vitrine"
version.workspace = true
edition = "2021"
license = "MIT"
repository = "https://github.com/ubugeeei/vize"
description = "Vitrine - The display case for Vize (Node.js/WASM bindings)"
publish = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
name = "vize_vitrine"
crate-type = ["cdylib", "rlib"]

[features]
default = ["glyph"]
glyph = ["dep:vize_glyph"]
napi = [
  "dep:napi",
  "dep:napi-derive",
  "dep:glob",
  "dep:rayon",
  "dep:ignore",
  "vize_atelier_sfc/native",
  "glyph",
]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:js-sys", "dep:web-sys", "glyph"]

[dependencies]
vize_carton = { workspace = true }
vize_relief = { workspace = true }
vize_atelier_core = { workspace = true }
vize_atelier_dom = { workspace = true }
vize_atelier_vapor = { workspace = true }
vize_atelier_ssr = { workspace = true }
vize_atelier_sfc = { workspace = true, default-features = false }
vize_musea = { workspace = true }
vize_patina = { workspace = true }
vize_glyph = { workspace = true, optional = true }
vize_croquis = { workspace = true }
vize_canon = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

# NAPI (optional)
napi = { workspace = true, optional = true }
napi-derive = { workspace = true, optional = true }

# Glob pattern (for batch compile)
glob = { version = "0.3", optional = true }

# Multithreading (for batch compile)
rayon = { version = "1.10", optional = true }

# Directory walking with .gitignore support (for lint)
ignore = { version = "0.4", optional = true }

# WASM (optional)
wasm-bindgen = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }

# For WASM compatibility with getrandom
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
napi-build = "2.0"

[dev-dependencies]
insta.workspace = true
